<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_screen"
    tools:context=".DetailExplanationScreenActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/bt_history_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/general_back_arrow_ic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_headline_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryGreen"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/diagnose_title"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/bt_history_back"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_detail_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_headline_detail">
            <ImageView
                android:id="@+id/iv_detail_img"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:src="@drawable/homescreen_history_sample_img"
                android:scaleType="fitXY" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_headline_sickness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryGreen"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/tv_detail_headline_sickness"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/cv_detail_img"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_headline_sickness_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/tv_detail_temp_text"
            android:layout_marginTop="10dp"
            android:justificationMode="inter_word"
            app:layout_constraintTop_toBottomOf="@+id/tv_headline_sickness"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_headline_prevention"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryGreen"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/tv_detail_headline_prevention"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/tv_headline_sickness_desc"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_headline_prevention_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/tv_detail_temp_text"
            android:layout_marginTop="10dp"
            android:justificationMode="inter_word"
            app:layout_constraintTop_toBottomOf="@+id/tv_headline_prevention"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_headline_recommendation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryGreen"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/tv_detail_headline_recommendation"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/tv_headline_prevention_desc"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_headline_recommendation_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/tv_detail_temp_text"
            android:layout_marginTop="10dp"
            android:justificationMode="inter_word"
            app:layout_constraintTop_toBottomOf="@+id/tv_headline_recommendation"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>