<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.history.FragmentHistoryScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_headline_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_history_headline"
            android:textColor="@color/primaryGreen"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_screen"
            android:layout_marginStart="@dimen/margin_screen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="@dimen/margin_screen"
            app:cardCornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_headline_history">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingVertical="20dp">

                <ImageView
                    android:id="@+id/iv_history"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="center"
                    android:src="@drawable/homescreen_history_sample_img"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_history_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/homescreen_tv_history_date"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/iv_history"
                    app:layout_constraintTop_toTopOf="@+id/iv_history" />

                <TextView
                    android:id="@+id/tv_history_diagnose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/homescreen_tv_history_diagnose"
                    android:textColor="@color/primaryGreen"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/iv_history"
                    app:layout_constraintTop_toBottomOf="@+id/tv_history_date" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/homescreen_arrow_history_ic" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>