<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryScreenActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_screen"
        android:layout_marginTop="@dimen/margin_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/bt_history_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/general_back_arrow_ic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_headline_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryGreen"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/tv_history_headline"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/bt_history_back"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_headline_history">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="20dp">

                    <ImageView
                        android:id="@+id/iv_history"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:scaleType="center"
                        android:src="@drawable/homescreen_history_sample_img"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_history_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/homescreen_tv_history_date"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="14sp"
                        app:layout_constraintStart_toEndOf="@+id/iv_history"
                        app:layout_constraintTop_toTopOf="@+id/iv_history" />

                    <TextView
                        android:id="@+id/tv_history_diagnose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/homescreen_tv_history_diagnose"
                        android:textColor="@color/primaryGreen"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/iv_history"
                        app:layout_constraintTop_toBottomOf="@+id/tv_history_date" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:srcCompat="@drawable/homescreen_arrow_history_ic" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_menubar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardPreventCornerOverlap="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_menu_home"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="fitXY"
                android:src="@drawable/homescreen_home_menu_green_ic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/img_menu_history"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_menubar_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tv_menubar_home"
                app:layout_constraintEnd_toEndOf="@id/img_menu_home"
                app:layout_constraintStart_toStartOf="@id/img_menu_home"
                app:layout_constraintTop_toBottomOf="@id/img_menu_home" />

            <ImageView
                android:id="@+id/img_menu_history"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="fitXY"
                android:src="@drawable/homescreen_history_menu_black_ic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_menu_home"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_menubar_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tv_menubar_history"
                app:layout_constraintEnd_toEndOf="@id/img_menu_history"
                app:layout_constraintStart_toStartOf="@id/img_menu_history"
                app:layout_constraintTop_toBottomOf="@id/img_menu_history" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>